2023-10-01  Juergen Fenn  <jfenn@gmx.net>

	* l2intro.org: minor fixes, typos

2023-09-27  Juergen Fenn  <jfenn@gmx.net>

	* l2intro.org: add configuration für HTML export

	* l2intro.org: add course materials and historic guides

2023-09-26  Juergen Fenn  <jfenn@gmx.net>

	* l2intro.org: add usrguide3

2023-09-25  Juergen Fenn  <jfenn@gmx.net>

	* l2intro.org: add configuration for HTML export
	
	* l2intro.org: add DANTE meetings at github.com/dante-ev/Vortraege_Tagungen

	* l2intro.org: add DTK bibliography at github.com/dante-ev/dtk-bibliography

	* l2intro.org: add link to latex-project.org/help/documentation/

	* changelog: add file