@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 <head>
-<!-- 2023-10-01 So 12:06 -->
+<!-- 2023-10-02 Mo 17:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Textsatz mit TeX/LaTeX</title>
@@ -22,9 +22,9 @@
 <span class="aktuell">TeX</span>  
 </p>
 
-<div id="outline-container-orgd66c354" class="outline-2">
-<h2 id="orgd66c354">Was ist TeX? Was ist LaTeX?</h2>
-<div class="outline-text-2" id="text-orgd66c354">
+<div id="outline-container-org4ae10dd" class="outline-2">
+<h2 id="org4ae10dd">Was ist TeX? Was ist LaTeX?</h2>
+<div class="outline-text-2" id="text-org4ae10dd">
 <blockquote>
 <p>
 <i>„TeX has always had a special place in my heart. We made the world a
@@ -117,9 +117,9 @@ Grafikdesign</li>
 </div>
 </div>
 
-<div id="outline-container-orga553048" class="outline-2">
-<h2 id="orga553048">CTAN</h2>
-<div class="outline-text-2" id="text-orga553048">
+<div id="outline-container-org2e65a43" class="outline-2">
+<h2 id="org2e65a43">CTAN</h2>
+<div class="outline-text-2" id="text-org2e65a43">
 <p>
 Das <i>Comprehensive TeX Archive Network</i> <a href="https://ctan.org/">CTAN</a> (sprich: zeh-tan) ist ein
 Netzwerk von Servern, über das TeX, LaTeX und die ergänzende Software
@@ -138,9 +138,9 @@ noch auf dem Portal fortgeführt wird.
 </div>
 </div>
 
-<div id="outline-container-orgde5daa6" class="outline-2">
-<h2 id="orgde5daa6">Installation</h2>
-<div class="outline-text-2" id="text-orgde5daa6">
+<div id="outline-container-org926fcc8" class="outline-2">
+<h2 id="org926fcc8">Installation</h2>
+<div class="outline-text-2" id="text-org926fcc8">
 <p>
 (La)TeX kann auf allen Plattformen eingesetzt werden. Benötigt werden
 eine TeX-Distribution – <a href="https://www.tug.org/texlive/">TeX&nbsp;Live</a> bzw. dessen Variante <a href="https://www.tug.org/mactex/">MacTeX</a>
@@ -205,9 +205,9 @@ WYSIWYG? preview-latex unter Emacs und andere Ansätz</a>e, in: DTK
 </div>
 </div>
 
-<div id="outline-container-org8e358d9" class="outline-2">
-<h2 id="org8e358d9">Online-Ressourcen</h2>
-<div class="outline-text-2" id="text-org8e358d9">
+<div id="outline-container-orgc526919" class="outline-2">
+<h2 id="orgc526919">Online-Ressourcen</h2>
+<div class="outline-text-2" id="text-orgc526919">
 <p>
 Unter den Texten, die online verfügbar sind, ist die Einführung in
 LaTeX, die das <i>LaTeX Project</i> bereitstellt, grundlegend. Sie ist in
@@ -289,9 +289,9 @@ und XeLaTeX aus.
 </div>
 </div>
 
-<div id="outline-container-orga7656a2" class="outline-2">
-<h2 id="orga7656a2">Wissenschaftliche Arbeiten mit LaTeX schreiben</h2>
-<div class="outline-text-2" id="text-orga7656a2">
+<div id="outline-container-org7c182f5" class="outline-2">
+<h2 id="org7c182f5">Wissenschaftliche Arbeiten mit LaTeX schreiben</h2>
+<div class="outline-text-2" id="text-org7c182f5">
 <p>
 In meinem Topic Index zum TeX Catalogue gab es bis 2017 <a href="http://dante.ctan.org/tex-archive/obsolete/help/Catalogue/bytopic.html#humanities">eine Übersicht</a>
 über einschlägige Pakete auf CTAN für die Geisteswissenschaftlen
@@ -305,9 +305,12 @@ organisiert, erklären mehrere Autoren:
 <li>Marion Neubauer: Feinheiten bei wissenschaftlichen Publikationen –
 Mikrotypographie-Regeln, in: <a href="https://archiv.dante.de/DTK/PDF/komoedie_1996_4.pdf">DTK 4/1996</a>, S.&nbsp;23–40, <a href="https://archiv.dante.de/DTK/PDF/komoedie_1997_1.pdf">DTK 1/1997</a>,
 S.&nbsp;25–44</li>
+<li>David Latchman: <a href="https://www.tug.org/TUGboat/tb33-2/tb104latchman-thesis.pdf">Preparing your thesis in LaTeX</a>, in: TUGboat&nbsp;33
+(2012), No.&nbsp;2, pp.&nbsp;167&#x2013;171</li>
 <li><a href="http://www.sodtalbers.de/tex/">juramisc</a>, eine Sammlung von LaTeX-Klassen und -Paketen für die
 rechtswissenschaftliche Arbeit und für das Referendariat von Axel
 Sodtalbers</li>
+<li><a href="https://www.suenkler.info/emacs/emacs-latex/">Juristische Texte mit dem Textsatzsystem LaTeX</a> von Hendrik Sünkler</li>
 <li><a href="https://www1.essex.ac.uk/linguistics/external/clmt/latex4ling/">LaTeX for Linguists</a>, LaTeX4Ling, von Douglas J. Arnold</li>
 <li>David Latchman: <a href="https://www.tug.org/TUGboat/tb33-2/tb104latchman-thesis.pdf">Preparing your thesis in LaTeX</a>, in: TUGboat&nbsp;33
 (2012), No.&nbsp;2, pp.&nbsp;167–171</li>
@@ -318,19 +321,18 @@ Multilingual Documents Using Unicode, OpenType, and XeTeX</a></li>
 </ul>
 
 <p>
-Die Bibliothek der TU&nbsp;München erstellt jährlich eine
-<a href="https://www.ub.tum.de/literaturverwaltung">Übersicht über
-Literaturverwaltungsprogramme</a> – auch über Literaturverwaltungen,
-die sich zur Arbeit mit BibTeX-Datenbanken eignen. BibTeX und Biblatex
-werden von <a href="https://bibdesk.sourceforge.io/">BibDesk</a>, <a href="https://www.jabref.org/">JabRef</a> und <a href="https://www.zotero.org/">Zotero</a> unterstützt. Eine reine
-Cloud-Lösung, die auf BibTeX/Biblatex setzt, ist der
-Literaturverwaltungs- und Social-Bookmarking-Dienst <a href="https://www.bibsonomy.org/">BibSonomy</a>, der von
-den Universitäten Kassel, Würzburg und von der Humboldt-Universität
-Berlin gehostet und der aktiv entwickelt wird. Wenn etwas nicht
-funktioniert, was selten vorkommt, kann man die Maintainer per E-Mail
-darauf hinweisen. Ich arbeite seit langem mit BibSonomy und Zotero.
-Beide Plattformen können sowohl offen als auch geschlossen, einzeln
-und in einer Gruppe eingesetzt werden.
+Die Bibliothek der TU&nbsp;München erstellt jährlich eine <a href="https://www.ub.tum.de/literaturverwaltung">Übersicht
+über Literaturverwaltungsprogramme</a> – auch über
+Literaturverwaltungen, die sich zur Arbeit mit BibTeX-Datenbanken
+eignen. BibTeX und Biblatex werden von <a href="https://bibdesk.sourceforge.io/">BibDesk</a>, <a href="https://www.jabref.org/">JabRef</a> und <a href="https://www.zotero.org/">Zotero</a>
+unterstützt. Eine reine Cloud-Lösung, die auf BibTeX/Biblatex setzt,
+ist der Literaturverwaltungs- und Social-Bookmarking-Dienst <a href="https://www.bibsonomy.org/">BibSonomy</a>,
+der von den Universitäten Kassel, Würzburg und von der
+Humboldt-Universität Berlin gehostet und der aktiv entwickelt wird.
+Wenn etwas nicht funktioniert, was selten vorkommt, kann man die
+Maintainer per E-Mail darauf hinweisen. Ich arbeite seit langem mit
+BibSonomy und Zotero. Beide Plattformen können sowohl offen als auch
+geschlossen, einzeln und in einer Gruppe eingesetzt werden.
 </p>
 
 <ul class="org-ul">
@@ -346,9 +348,9 @@ Mannheim, 2015. Parallel veröffentlicht in: ABI-Technik, 4/2015,
 </div>
 </div>
 
-<div id="outline-container-org99c8550" class="outline-2">
-<h2 id="org99c8550">Literatur</h2>
-<div class="outline-text-2" id="text-org99c8550">
+<div id="outline-container-orgc604887" class="outline-2">
+<h2 id="orgc604887">Literatur</h2>
+<div class="outline-text-2" id="text-orgc604887">
 <p>
 Einen Überblick über die für <i>TeX&nbsp;&amp; Friends</i> im allerweitesten
 Sinne relevante Literatur erhält man im <i><a href="http://ftp.math.utah.edu/pub/tex/bib/index-table.html">TeX User Group bibliography
@@ -461,9 +463,9 @@ CervanTeX (2001–2007)</li>
 </div>
 </div>
 
-<div id="outline-container-org02e28be" class="outline-2">
-<h2 id="org02e28be">Diskussion und Neuigkeiten rund um TeX und LaTeX</h2>
-<div class="outline-text-2" id="text-org02e28be">
+<div id="outline-container-org39384b1" class="outline-2">
+<h2 id="org39384b1">Diskussion und Neuigkeiten rund um TeX und LaTeX</h2>
+<div class="outline-text-2" id="text-org39384b1">
 <p>
 Wie bei jedem freien Softwareprojekt gibt es auch bei TeX eine
 Gemeinde von Entwicklern und Benutzern, die sich online zusammenfinden
