@@ -246,9 +246,12 @@ organisiert, erklären mehrere Autoren:
 - Marion Neubauer: Feinheiten bei wissenschaftlichen Publikationen –
   Mikrotypographie-Regeln, in: [[https://archiv.dante.de/DTK/PDF/komoedie_1996_4.pdf][DTK 4/1996]], S.\nbsp{}23–40, [[https://archiv.dante.de/DTK/PDF/komoedie_1997_1.pdf][DTK 1/1997]],
   S.\nbsp{}25–44
+- David Latchman: [[https://www.tug.org/TUGboat/tb33-2/tb104latchman-thesis.pdf][Preparing your thesis in LaTeX]], in: TUGboat\nbsp{}33
+  (2012), No.\nbsp{}2, pp.\nbsp{}167--171
 - [[http://www.sodtalbers.de/tex/][juramisc]], eine Sammlung von LaTeX-Klassen und -Paketen für die
   rechtswissenschaftliche Arbeit und für das Referendariat von Axel
   Sodtalbers
+- [[https://www.suenkler.info/emacs/emacs-latex/][Juristische Texte mit dem Textsatzsystem LaTeX]] von Hendrik Sünkler
 - [[https://www1.essex.ac.uk/linguistics/external/clmt/latex4ling/][LaTeX for Linguists]], LaTeX4Ling, von Douglas J. Arnold
 - David Latchman: [[https://www.tug.org/TUGboat/tb33-2/tb104latchman-thesis.pdf][Preparing your thesis in LaTeX]], in: TUGboat\nbsp{}33
   (2012), No.\nbsp{}2, pp.\nbsp{}167–171
@@ -257,19 +260,18 @@ organisiert, erklären mehrere Autoren:
   Multilingual Documents Using Unicode, OpenType, and XeTeX]]
 - [[https://www.logicmatters.net/latex-for-logicians/][LaTeX for Logicians]] von Peter Smith 
 
-Die Bibliothek der TU\nbsp{}München erstellt jährlich eine
-[[https://www.ub.tum.de/literaturverwaltung][Übersicht über
-Literaturverwaltungsprogramme]] – auch über Literaturverwaltungen,
-die sich zur Arbeit mit BibTeX-Datenbanken eignen. BibTeX und Biblatex
-werden von [[https://bibdesk.sourceforge.io/][BibDesk]], [[https://www.jabref.org/][JabRef]] und [[https://www.zotero.org/][Zotero]] unterstützt. Eine reine
-Cloud-Lösung, die auf BibTeX/Biblatex setzt, ist der
-Literaturverwaltungs- und Social-Bookmarking-Dienst [[https://www.bibsonomy.org/][BibSonomy]], der von
-den Universitäten Kassel, Würzburg und von der Humboldt-Universität
-Berlin gehostet und der aktiv entwickelt wird. Wenn etwas nicht
-funktioniert, was selten vorkommt, kann man die Maintainer per E-Mail
-darauf hinweisen. Ich arbeite seit langem mit BibSonomy und Zotero.
-Beide Plattformen können sowohl offen als auch geschlossen, einzeln
-und in einer Gruppe eingesetzt werden.
+Die Bibliothek der TU\nbsp{}München erstellt jährlich eine [[https://www.ub.tum.de/literaturverwaltung][Übersicht
+über Literaturverwaltungsprogramme]] – auch über
+Literaturverwaltungen, die sich zur Arbeit mit BibTeX-Datenbanken
+eignen. BibTeX und Biblatex werden von [[https://bibdesk.sourceforge.io/][BibDesk]], [[https://www.jabref.org/][JabRef]] und [[https://www.zotero.org/][Zotero]]
+unterstützt. Eine reine Cloud-Lösung, die auf BibTeX/Biblatex setzt,
+ist der Literaturverwaltungs- und Social-Bookmarking-Dienst [[https://www.bibsonomy.org/][BibSonomy]],
+der von den Universitäten Kassel, Würzburg und von der
+Humboldt-Universität Berlin gehostet und der aktiv entwickelt wird.
+Wenn etwas nicht funktioniert, was selten vorkommt, kann man die
+Maintainer per E-Mail darauf hinweisen. Ich arbeite seit langem mit
+BibSonomy und Zotero. Beide Plattformen können sowohl offen als auch
+geschlossen, einzeln und in einer Gruppe eingesetzt werden.
 
 - Dominik Waßenhoven: Bibliographien erstellen mit biblatex, in: [[https://archiv.dante.de/DTK/PDF/komoedie_2008_2.pdf][DTK
   2/2008]], S.\nbsp{}53–75; [[https://archiv.dante.de/DTK/PDF/komoedie_2008_4.pdf][DTK 4/2008]], S.\nbsp{}31–50.
