@@ -1,3 +1,7 @@
+2023-10-02  Juergen Fenn  <jfenn@gmx.net>
+
+	* l2intro.org: add online resources for the humanities
+
 2023-10-01  Juergen Fenn  <jfenn@gmx.net>
 
 	* l2intro.org: minor fixes, typos
